# aira

./: CONTRIBUTORS.md  README.md
docs/: building-backend.md  building-cloud-infrastructure.md  building-frontend.md  concepts-architecture.md  data-structure.md  looker-requirements.md  pre-requisites.md  publishing-aira.md
src/Backend/: .env.example  CHANGELOG.md  Dockerfile  Makefile  alembic.ini  cloudbuild.yaml  db_migration.sh  fixture.py  main.py  mypy.ini  pylint.toml  pyproject.toml
src/Backend/migrations/: env.py
src/Backend/migrations/versions/: 2023_04_29_143931-8518ccf74f6b_startup_db.py  2023_04_29_143935-4c59ddc90b74_add_admin_role.py  2023_04_29_143938-94b026bd1f73_add_user_role.py  2023_04_29_144102-686a54dca68e_add_semi_admin_role.py  2023_05_01_150034-172b63b65b0c_add_session_model.py  2023_05_01_190636-2814eb6402f3_add_generation_to_session.py  2023_05_03_174247-e8d7b15c2a48_add_organization_and_groups_fixing_.py  2023_05_12_214607-c25b24a75bec_add_columns_to_user.py  2023_05_13_121704-23190f5d61ae_add_last_login_to_user.py  2023_05_13_133554-818ae2edd204_add_default_admin_user.py  2023_05_17_191026-a725a7209a56_adding_group_as_many_to_many_with_user.py  2023_05_17_204245-b7f0d4bb2541_add_exams_questions_table.py  2023_05_18_015359-03adf77cecd0_add_result_table.py  2023_05_18_221235-859443e79a80_adding_examuser_and_adding_name_phrase_.py  2023_05_19_130316-25e2e05c5fc5_remove_unused_column_from_exam_user.py  2023_05_20_193312-179d5b1a2c55_add_status_to_exam_user_questions_too.py  2023_05_20_195135-4a191094de13_fix_foreign_key_relationship.py  2023_05_30_173335-09bcd5ecbf1d_moving_grade_to_enum.py  2023_05_31_161324-431170d168be_add_org_to_user.py  2023_06_05_210145-a8fb190bf415_add_customer_ids_and_region_to_.py  2023_06_05_220314-af459c11e800_add_question_type.py  2023_06_06_001301-a37ce1b170bd_refactoring_result_table.py  2023_06_06_001350-494802acfeeb_recreating_result_table.py  2023_06_06_200941-fcf319cac6bd_add_column_to_result_table.py  2023_06_06_203158-ab7b8383843d_delete_exam_user_table.py  2023_06_06_203308-9a650cbb895f_recreate_exams_users.py  2023_06_07_233210-16af67d788a2_remove_examgroup_and_adding_grade_to_.py  2023_06_14_155849-181afb8d0e87_add_on_delete_cascade_to_many_to_many_.py  2023_06_14_175057-e9164fbde28d_changing_from_ondelete_restrict_to_no_.py  2023_06_18_134347-2fa71d14d1f1_dropping_foreign_key_constraint_for_euq.py  2023_06_22_211637-4d6b893ece60_adjust_roles.py  2023_07_28_000455-767598457f03_add_reset_token_to_user.py  2023_10_14_172206-bdae7a246545_add_county_column.py  2023_10_14_172414-2f4cd7846f29_add_new_roles.py  2023_10_25_213340-11294e7878d6_add_columns_to_user.py  2023_11_05_135936-e1bdd39016fb_update_semi_user_scopes.py  2023_11_05_155158-f3943cb79c0c_update_role_names_and_description.py  2024_02_19_003223-6349ef8435cb_adding_user_rating.py  2024_03_03_161653-60da2f57f9af_adding_formatted_data_to_question.py  2024_03_25_214238-ce130db65df2_adding_new_question_type.py  (+4 more)
src/Backend/src/api/: __init__.py  asgi.py  db.py  dependencies.py  errors.py  factory.py  logging_config.py  middleware.py  sentry.py  tracing.py  typings.py
src/Backend/src/api/adapters/google/: __init__.py  bigquery.py  cloud_storage.py  firebase.py  looker.py  pubsub.py  secret_manager.py  speech_to_text.py  speech_to_text_v2.py
src/Backend/src/api/adapters/memory/: __init__.py  exam.py  external_auth.py  group.py  organization.py  result.py  role.py  secret_manager.py  session_query.py  unit_of_work.py  user.py
src/Backend/src/api/adapters/sendgrid/: __init__.py  mail.py
src/Backend/src/api/adapters/sere/: __init__.py  api.py
src/Backend/src/api/adapters/sqlalchemy/: __init__.py  exam.py  group.py  organization.py  result.py  role.py  session_query.py  unit_of_work.py  user.py
src/Backend/src/api/domain/service/: __init__.py  phonemes.py  process_result.py
src/Backend/src/api/helpers/: __init__.py  auth.py  data.py  opentelemetry.py  schemas.py  session_manager.py  util.py
src/Backend/src/api/models/: __init__.py  exams.py  groups.py  organizations.py  roles.py  sessions.py  users.py
src/Backend/src/api/ports/: __init__.py  analytical.py  auth.py  dashboard.py  data_sync.py  exam.py  group.py  message_publisher.py  notification.py  organization.py  result.py  role.py  secret_manager.py  session_query.py  speech.py  storage.py  unit_of_work.py  user.py
src/Backend/src/api/routers/: __init__.py  endpoints.py  schemas.py
src/Backend/src/api/routers/auth/: __init__.py  crud.py  endpoints.py  schemas.py
src/Backend/src/api/routers/exams/: crud.py  endpoints.py  schemas.py
src/Backend/src/api/routers/groups/: __init__.py  crud.py  endpoints.py  schemas.py
src/Backend/src/api/routers/organizations/: __init__.py  crud.py  endpoints.py  schemas.py
src/Backend/src/api/routers/processor/: __init__.py  endpoints.py  schemas.py
src/Backend/src/api/routers/roles/: __init__.py  endpoints.py  schemas.py
src/Backend/src/api/routers/users/: __init__.py  crud.py  endpoints.py  schemas.py
src/Backend/tests/: conftest.py  private.pem  public.pem  test_smoke.py
src/Backend/tests/helpers/: database.py  strats.py
src/Backend/tests/integration/: test_exam_adapter.py  test_group_adapter.py  test_org_adapter.py  test_role_adapter.py  test_session_query_adapter.py  test_user_adapter.py
src/Backend/tests/unit/: test_asgi.py  test_auth_crud.py  test_auth_endpoint.py  test_cloud_storage.py  test_dependencies.py  test_exams_endpoint.py  test_exception_handler.py  test_groups_endpoint.py  test_middleware.py  test_organizations_endpoint.py  test_processor_endpoint.py  test_session_builder_stub.py  test_stt.py
src/Frontend/: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  Dockerfile  cloudbuild.yaml  components.json  i18next.d.ts  jest.config.mjs  jest.setup.js  next-i18next.config.js  next.config.js  next.config.mjs  package.json  plate-components.json  pnpm-lock.yaml  postcss.config.js  release-please-config.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
src/IAC/: 01-Apis.tf  02-sa_and_iam.tf  03-network.tf  README.md  (+9 more)
(+348 files in other folders)
